--- a/css/style.css
+++ b/css/style.css
@@ -368,3 +368,156 @@ table .up {
 
     color: var(--light-color);
 }
+
+
+
+.main__plans-container {
+    padding: 64px 0 10px;
+    width: 100%;
+    min-width: 280px;
+    height: auto;
+}
+
+.main__plans-container--titles {
+    margin: 0 auto;
+    margin-bottom: 30px;
+    width: 90%;
+    height: 115px;
+}
+.main__plans-container--titles h2 {
+    margin-bottom: 24px;
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+
+    color: var(--dark-color);
+}
+.main__plans-container--titles p {
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+
+    color: #757575;
+}
+
+
+.main__plans-container--slide {
+    display: flex;
+    gap: 10px;
+    padding: 20px 0;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+.plans-container--card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 190px;
+    max-width: 300px;
+    margin: 20px 5px 0;
+    padding: 0 15px;
+
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border-radius: 8px;
+}
+.recommended {
+    position: absolute;
+    padding: 8px;
+    left: calc(50% - 50px);
+    top: -15px;
+    width: 101px;
+    height: 31px;
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-family: 'Inter', sans-serif;
+
+    color: #FFFFFF;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+}
+.plan__title {
+    margin: 31px 0 8px;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+
+    color: black;
+}
+.plan__price {
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 5.2rem;
+    line-height: 6.3rem;
+    font-family: 'Inter', sans-serif;
+
+    color: #000000;
+}
+.plan__price span {
+    margin-right: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    vertical-align: 30px;
+
+    color: #363636;
+}
+.plan__saving {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    font-family: 'Inter', sans-serif;
+
+    color: #363636;
+}
+.plan__ca {
+    width: 150px;
+    height: 48px;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+
+    color: var(--dark-color);
+    border: 2px solid #F7931A;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.plan__ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    vertical-align: text-bottom;
+
+    background-image: url('https://i.postimg.cc/3rqLvD80/orange-right-arrow-png.png');
+}
+
+
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(207.8deg, #6441A5 16.69%, #185a9d 100%);
+}
+footer section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+footer .left ul {
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    list-style: none;
+}
+.left li {
+    margin: 10px 0;
+}
+.left a {
+    text-decoration: none;
+    color: var(--light-color);
+}
